--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discord</title>    
+    <title>Discord</title>
+    <!-- Style -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- Font     -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Header -->
+    <header>
+        <img class="logo" src="img/logo.svg" alt="Logo Discord">
+        <div class="link-header-container">
+            <a href="" class="link-header">Scarica</a>
+            <a href="" class="link-header">Perché Discord</a>
+            <a href="" class="link-header">Nitro</a>
+            <a href="" class="link-header">Sicurezza</a>
+            <a href="" class="link-header">Assistenza</a>
+        </div>
+        <div class="button-header"><a class="button-header-text" href="">Accedi</a></div>
+    </header>
+
 
     
 </body>
