Add welcone section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
         <div class="button-header"><a class="button-header-text" href="">Accedi</a></div>
     </header>
 
+    <section class="welcome">
+        <div class="welcome-block">
+            <h1 class="title">Il tuo posto per parlare</h1>
+        <p class="welcome-paragraph">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+        </div>
+        
+
+
+    </section>
+
+
+
 
     
 </body>
