Add welcome section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
     <!-- Header -->
@@ -23,18 +25,31 @@
             <a href="" class="link-header">Sicurezza</a>
             <a href="" class="link-header">Assistenza</a>
         </div>
-        <div class="button-header"><a class="button-header-text" href="">Accedi</a></div>
+        <div class="button-header">
+            <a class="button-header-text" href="">Accedi</a>
+        </div>
     </header>
 
     <section class="welcome">
-        <div class="welcome-block">
-            <h1 class="title">Il tuo posto per parlare</h1>
-        <p class="welcome-paragraph">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
-        </div>
-        
 
+        <h1 class="title1">Il tuo posto per parlare</h1>
+
+        <p class="welcome-paragraph">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+
+        <div class="button-welcome-block">
+
+            <div class="button-welcome" id="white">
+                <a class="button-welcome-text" href=""><i class="fa fa-long-arrow-down" aria-hidden="true"></i>Scarica per Mac</a>
+            </div>
+
+            <div class="button-welcome" id="black">
+                <a class="button-welcome-text" href="">Apri Discord nel tuo browser</a>
+            </div>
+
+        </div>
 
     </section>
+
 
 
 
