Add main sections

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <section class="welcome">
 
-        <h1 class="title1">Il tuo posto per parlare</h1>
+        <h1 class="welcome-title">Il tuo posto per parlare</h1>
 
         <p class="welcome-paragraph">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
 
@@ -49,6 +49,33 @@
         </div>
 
     </section>
+
+    <section class="section first">
+        <img class="section-pic first" src="img/item1.svg" alt="">
+        <div class="section-text first">
+            <h1 class="section-title first">Un luogo a invito con tutto lo spazio necessario per parlare</h1>
+            <p class="section-paragraph first">I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+        </div>
+    </section>
+
+    <section class="section second">
+
+        <div class="section-text second">
+            <h1 class="section-title second">Dove trovarsi è facile</h1>
+            <p class="section-paragraph second">Mettiti comoso in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi instantaneamente senza dover chiamare</p>
+        </div>
+        <img class="section-pic second" src="img/item2.svg" alt="">
+    </section>
+
+    <section class="section third">
+        <img class="section-pic third" src="img/item3.svg" alt="">
+        <div class="section-text third">
+            <h1 class="section-title third">Da pochi a un fandom</h1>
+            <p class="section-paragraph third">Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
+        </div>
+    </section>
+
+    
 
 
 
