Refactor: sections and footer

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
         </div>
     </section>
 
+    <img class="wave" src="img/wave.svg" alt="">
+
     <section class="section second">
 
         <div class="section-text second">
@@ -67,6 +69,10 @@
         <img class="section-pic second" src="img/item2.svg" alt="">
     </section>
 
+    <img class="wave rotate" src="img/wave.svg" alt="">
+
+    
+
     <section class="section third">
         <img class="section-pic third" src="img/item3.svg" alt="">
         <div class="section-text third">
@@ -74,6 +80,8 @@
             <p class="section-paragraph third">Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
         </div>
     </section>
+
+    <img class="wave" src="img/wave.svg" alt="">
 
     <section class="last-section">
         <div class="last-section-text">
