--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <span class="cta">Pronto a iniziare la tua avventura?</span>
             </div>
             <div class="button" id="blue-last-section">
-                <a class="button-text" href=""><i class="fa fa-long-arrow-down" aria-hidden="true"></i>Scarica per Mac</a>
+                <a class="button-text" href=""><i class="fa fa-long-arrow-down" aria-hidden="true" id="last-section-arrow"></i>Scarica per Mac</a>
             </div>
         </section>
     </main>
