--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 </li>
                 <li>
                     <a href="">
-                        Assi
+                        Assistenza
                     </a>
                 </li>
             </ul>
