--- a/index.html
+++ b/index.html
@@ -277,3 +277,53 @@
     </footer>  
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <header>
+        <div class="header-text-block">
+            <a href="">
+                <span class="header-text">Donna</span>
+            </a>
+            <a href="">
+                <span class="header-text">Uomo</span>
+            </a>
+            <a href="">
+                <span class="header-text">Bambini</span>
+            </a>
+        </div>
+
+        <a class="header-logo-link" href="">
+            <img class="header-logo" src="img/boolean-logo.png" alt="">
+        </a>
+
+        <div class="header-icon-block">
+            <a href="">
+                <span class="header-icon"><i class="fa-regular fa-user"></i></span>
+            </a>
+            <a href="">
+                <span class="header-icon"><i class="fa-regular fa-heart"></i></span>
+            </a>
+            <a href="">
+                <span class="header-icon"><i class="fa-solid fa-bag-shopping"></i></span>
+            </a>
+        </div>
+    </header> -->
+
+
+
+
